CloneEssay revisited