@@ -2,20 +2,22 @@ package eu.fays.sandbox.clone;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class CloneEssay {
 
 	// https://www.artima.com/intv/bloch13.html
 	public static void main(String[] args) throws Exception {
-		A a0 = new A(1, "one", new ArrayList<String>(Arrays.asList(new String[] { "alpha", "beta", "gamma" })));
-		A a1 = a0.copy();
-		System.out.println("a0: " + a0);
-		System.out.println("a1: " + a1);
-		a1.i = Integer.valueOf(2);
-		a1.s = "two";
-		a1.l.add("delta");
-		System.out.println("a0: " + a0);
-		System.out.println("a1: " + a1);
+		B b0 = new B(1, "one", Math.E, List.of("alpha", "beta", "gamma"));
+		B b1 = b0.copy();
+		System.out.println("b0: " + b0);
+		System.out.println("b1: " + b1);
+		b1.setNumber(2);
+		b1.setText("two");
+		b1.setDecimal(Math.PI);
+		b1.add("delta");
+		System.out.println("b0: " + b0);
+		System.out.println("b1: " + b1);
 	}
 
 }
